# ddd_fastapi_template

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
scripts/: docker_cleanup.sh  volumes_cleanup.sh
src/: config.py  main.py
src/app/: google_auth.py  user_service.py
src/domain/: entities.py  repositories.py
src/infrastructure/: auth.py  database.py  dependency_injection.py  repositories.py
src/presentation/: google_auth.py  routers.py  yandex_auth.py
